bk_ida/gccida/g1/poplevel
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/poplevel/src/c-decl.c:1457:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *blocks; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/poplevel/src/c-decl.c:1464:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/poplevel/src/c-decl.c:1580:56: error: use of undeclared identifier 'stru_634008'
warning_with_decl( j->vector.elements, ( const char *)&stru_634008.block + 200); 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/poplevel/src/c-decl.c:1584:54: error: use of undeclared identifier 'stru_634008'
error_with_decl( j->vector.elements, ( const char *)&stru_634008.block + 168); 
                                                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/poplevel/src/obj/c-decl.o] Error 1
